feat: Upload de imagem de usuario
